--- a/community/server/src/docs/ops/security.asciidoc
+++ b/community/server/src/docs/ops/security.asciidoc
@@ -51,7 +51,7 @@ The Neo4j server includes built in support for SSL encrypted communication over 
 The first time the server starts, it automatically generates a self-signed SSL certificate and a private key.
 Because the certificate is self signed, it is not safe to rely on for production use, instead, you should provide your own key and certificate for the server to use.
 
-To override the send-signed key and certificate, replace _neo4j.key_ and _neo4j.cert_ in the <<file-locations, _certificates_>> directory. The location of this directory can be configured by setting _dbms.directories.certificates_ in <<file-locations, _neo4j.conf_>>.
+To provide your own key and certificate put them in the <<file-locations, ​_certificates_>> directory. The files must be named _neo4j.key_​ and ​_neo4j.cert_​. The location of the directory can be configured by setting ​_dbms.directories.certificates_​ in <<file-locations, _neo4j.conf_>>.
 
 [source,properties]
 ----
