--- a/enterprise/backup/src/docs/ops/backup.asciidoc
+++ b/enterprise/backup/src/docs/ops/backup.asciidoc
@@ -20,11 +20,7 @@ It can also be configured to listen on all interfaces by setting `dbms.backup.ad
 Performing a backup requires specifying the target host, an optional port, and the backup location.
 The backup tool will automatically select a full or incremental backup, based on whether an existing backup is present at that location.
 
-The relevant configuration settings are found below.
-
-include::{importdir}/neo4j-backup-docs-jar/ops/configuration-attributes.asciidoc[]
-
-include::{importdir}/neo4j-consistency-check-docs-jar/ops/configuration-attributes.asciidoc[]
+See the <<configuration-settings,configuration reference section>> for detailed documentation on available configuration options.
 
 
 [[backup-performing]]
