--- a/manual/embedded-examples/src/docs/dev/procedures.asciidoc
+++ b/manual/embedded-examples/src/docs/dev/procedures.asciidoc
@@ -70,10 +70,14 @@ Neo4j comes with a handful of pre-packaged procedures ready to be used:
 [options="header", cols="m,m,d"]
 |===
 | Procedure name        | Command to invoke procedure | What it does
-| ListProcedures        | CALL db.procedures()        | List all procedures in the database.
 | ListLabels            | CALL db.labels()            | List all labels in the database.
 | ListRelationshipTypes | CALL db.relationshipTypes() | List all relationship types in the database.
 | ListPropertyKeys      | CALL db.propertyKeys()      | List all property keys in the database.
+| ListIndexes           | CALL db.indexes()           | List all indexes in the database.
+| ListConstraints       | CALL db.constraints()       | List all constraints in the database.
+| ListProcedures        | CALL sys.procedures()       | List all procedures in the DBMS.
+| ListComponents        | CALL sys.components()       | List DBMS components and their versions.
+| QueryJmx              | CALL sys.queryJmx(query)    | Query JMX management data by domain and name. For instance, "org.neo4j:*".
 |===
 
 
