--- a/manual/contents/src/operations/configuration-reference.asciidoc
+++ b/manual/contents/src/operations/configuration-reference.asciidoc
@@ -15,7 +15,7 @@ This allows you, for instance, to have separate connectors for remote and local 
 If you are using Neo4j Embedded, you need to include the Bolt extension on your class path to enable Bolt.
 See <<tutorials-java-embedded-bolt>> for details on how to open a Bolt connector from Neo4j Embedded.
 
-Each connector has a unique key to identify it, denoted `{key}` in the listing below.
+Each connector has a unique key to identify it, denoted `(bolt-connector-key)` in the listing below.
 
 include::{importdir}/neo4j-config-docs-docs-jar/ops/configuration-bolt-connector-attributes.asciidoc[]
 
@@ -26,5 +26,7 @@ HTTP Connectors expose the Neo4j REST API and related HTTP resources.
 At this time, you can configure at most one HTTP connector and one HTTPS connector.
 
 HTTPS connectors are configured by setting a connector to require encryption.
+
+Each connector has a unique key to identify it, denoted `(http-connector-key)` in the listing below.
 
 include::{importdir}/neo4j-config-docs-docs-jar/ops/configuration-http-connector-attributes.asciidoc[]
