--- a/community/server/src/docs/ops/security.asciidoc
+++ b/community/server/src/docs/ops/security.asciidoc
@@ -51,6 +51,10 @@ The Neo4j server includes built in support for SSL encrypted communication over 
 The first time the server starts, it automatically generates a self-signed SSL certificate and a private key.
 Because the certificate is self signed, it is not safe to rely on for production use, instead, you should provide your own key and certificate for the server to use.
 
+[CAUTION]
+Using autogeneration of self-signed SSL certificates will not work if the Neo4j server has been configured with multiple connectors that do not bind to the same IP address.
+If you need to use multiple IP addresses, please configure certificates manually and consider using multi-host or wildcard certificates instead.
+
 To provide your own key and certificate put them in the <<file-locations, _certificates_>> directory.
 The files must be named _neo4j.key_ and _neo4j.cert_.
 The location of the directory can be configured by setting _dbms.directories.certificates_ in <<file-locations, _neo4j.conf_>>.
