--- a/manual/contents/src/operations/configuration-reference.asciidoc
+++ b/manual/contents/src/operations/configuration-reference.asciidoc
@@ -16,6 +16,9 @@ Each connector has a unique key to identify it, denoted `(bolt-connector-key)` i
 
 include::{importdir}/neo4j-config-docs-docs-jar/ops/configuration-bolt-connector-attributes.asciidoc[]
 
+[CAUTION]
+Using autogeneration of self-signed SSL certificates will not work if the Neo4j server has been configured with multiple connectors that do not bind to the same IP address.
+If you need to use multiple IP addresses, please configure certificates manually and consider using multi-host or wildcard certificates instead.
 
 == Configuring HTTP Connectors
 
@@ -26,3 +29,7 @@ There must be exactly one HTTP connector and zero or one HTTPS connectors config
 Each connector has a unique key to identify it, denoted `(http-connector-key)` in the listing below.
 
 include::{importdir}/neo4j-config-docs-docs-jar/ops/configuration-http-connector-attributes.asciidoc[]
+
+[CAUTION]
+Using autogeneration of self-signed SSL certificates will not work if the Neo4j server has been configured with multiple connectors that do not bind to the same IP address.
+If you need to use multiple IP addresses, please configure certificates manually and consider using multi-host or wildcard certificates instead.
