--- a/community/server/src/docs/man/neo4j-admin.1.asciidoc
+++ b/community/server/src/docs/man/neo4j-admin.1.asciidoc
@@ -16,7 +16,7 @@ Neo4j is a graph database, perfect for working with highly connected data.
 The `neo4j` command is used to control the Neo4j Server.
 
 The preferred way to install Neo4j on Linux systems is by using prebuilt installation packages.
-For information regarding Windows, see http://neo4j.com/docs/stable/server-installation.html#windows-install.
+For information regarding Windows, see http://neo4j.com/docs/operations-manual/current/#windows-installation.
 
 [[neo4j-admin-manpage-commands]]
 == COMMANDS
