--- a/community/import-tool/src/docs/man/neo4j-import.1.asciidoc
+++ b/community/import-tool/src/docs/man/neo4j-import.1.asciidoc
@@ -15,7 +15,7 @@ neo4j-import - Neo4j Import Tool
 *neo4j-import* is used to create a new Neo4j database from data in CSV files.
 See the chapter "Import Tool" in the Neo4j Manual for details on the CSV file format -- a special kind of header is required.
 
-For information regarding Windows, see http://neo4j.com/docs/stable/powershell.html.
+For information regarding Windows, see http://neo4j.com/docs/operations-manual/current/#powershell.
 
 [[neo4j-import-manpage-options]]
 == OPTIONS
