--- a/community/server/src/docs/man/neo4j.1.asciidoc
+++ b/community/server/src/docs/man/neo4j.1.asciidoc
@@ -17,7 +17,7 @@ The `neo4j` command is used to control the Neo4j Server.
 
 The preferred way to install Neo4j on Linux systems is by using prebuilt installation packages.
 
-For information regarding Windows, see http://neo4j.com/docs/stable/server-installation.html#windows-install.
+For information regarding Windows, see http://neo4j.com/docs/operations-manual/current/#windows-installation.
 
 [[neo4j-manpage-commands]]
 == COMMANDS
