--- a/enterprise/backup/src/docs/man/neo4j-backup.1.asciidoc
+++ b/enterprise/backup/src/docs/man/neo4j-backup.1.asciidoc
@@ -18,7 +18,7 @@ The first backup must be a full backup, after that incremental backups can be pe
 
 The source(s) are given as host:port pairs, the target is a filesystem location.
 
-For help regarding Windows, see the reference in <<powershell-windows,Windows>>.
+For help regarding Windows, see the reference in http://neo4j.com/docs/operations-manual/current/#powershell-windows.
 
 == BACKUP TYPE
 
