--- a/manual/contents/src/operations/configuration-reference.asciidoc
+++ b/manual/contents/src/operations/configuration-reference.asciidoc
@@ -17,8 +17,8 @@ Each connector has a unique key to identify it, denoted `(bolt-connector-key)` i
 include::{importdir}/neo4j-config-docs-docs-jar/ops/configuration-bolt-connector-attributes.asciidoc[]
 
 [CAUTION]
-Using autogeneration of self-signed SSL certificates will not work if the Neo4j server has been configured with multiple connectors that do not bind to the same IP address.
-If you need to use multiple IP addresses, please configure certificates manually and consider using multi-host or wildcard certificates instead.
+Using auto-generation of self-signed SSL certificates will not work if the Neo4j server has been configured with multiple connectors that bind to different IP addresses.
+If you need to use multiple IP addresses, please configure certificates manually and use multi-host or wildcard certificates instead.
 
 == Configuring HTTP Connectors
 
@@ -31,5 +31,5 @@ Each connector has a unique key to identify it, denoted `(http-connector-key)` i
 include::{importdir}/neo4j-config-docs-docs-jar/ops/configuration-http-connector-attributes.asciidoc[]
 
 [CAUTION]
-Using autogeneration of self-signed SSL certificates will not work if the Neo4j server has been configured with multiple connectors that do not bind to the same IP address.
-If you need to use multiple IP addresses, please configure certificates manually and consider using multi-host or wildcard certificates instead.
+Using auto-generation of self-signed SSL certificates will not work if the Neo4j server has been configured with multiple connectors that bind to different IP addresses.
+If you need to use multiple IP addresses, please configure certificates manually and use multi-host or wildcard certificates instead.
